Add DSL2 parser + major cleanup